# django-skeleton

./: .env.development.example  .env.production.example  CLAUDE.md  README.md  pyproject.toml
docker/development/: Dockerfile  docker-compose.yml
docker/production/: Dockerfile  cronjobs  dir_setup.sh  docker-compose.yml  nginx.conf
requirements/: base.txt  development.txt  production.txt
src/: manage.py
src/project_name/: asgi.py  urls.py  wsgi.py
src/project_name/settings/: __init__.py  common.py  development.py  production.py  test.py
src/templates/: base.html
